schema/app-scaffold/k8s/overlays/homelab/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
$patch: delete
